--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -470,7 +470,7 @@ input[type="file"] {
   width: 100%;
   height: 0%;
   margin-top: 100%;
-  background-image: url("https://storage.googleapis.com/webdesignledger.pub.network/WDL/12f213e1-t1.jpg");
+  background-image: url("../img/teslaLogo.jpg");
   background-repeat: no-repeat;
   background-size: 100px 100px;
   background-position: center bottom;
