--- a/src/style.css
+++ b/src/style.css
@@ -45,20 +45,13 @@
 .progress-bar {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
-    height: min-content;
     padding: 1vw;
-    /* height: 10px;
-    width: 25%;
-    top: 20px;
-    left: 10%; */
 }
 
 
 .dot {
-    display: flex;
-    height: 30px;
-    width: 30px;
+    height: 20px;
+    width: 20px;
     border-radius: 50%;
 }
 
@@ -82,6 +75,18 @@
 }
 
 
+
+.first {
+    background: #d9a20c;
+}
+
+.second {
+    background: #d9a20c;
+}
+
+.third {
+    background: #d9a20c;
+}
 
 
 
