--- a/src/style.css
+++ b/src/style.css
@@ -28,65 +28,92 @@
     height: min-content;
 }
 
-.message {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+.messages {
     height: min-content;
     font-weight: bold;
     font-size: 1.2rem;
     padding: 1vw;
 }
 
-.message-child {
-    margin-left: 6vw;
+.message {
+    display: inline;
+    position: absolute;
+    margin-left: 4vw;
 }
 
-.progress-bar {
-    display: flex;
-    flex-direction: row;
-    padding: 1vw;
+.child-one {
+    left: 5vw;
+}
+
+.child-two {
+    left: 30.5vw;
+}
+
+.child-three {
+    left: 55vw;
+}
+
+.child-four {
+    left: 80vw;
 }
 
 
-.dot {
-    height: 20px;
-    width: 20px;
+
+.wrapper {
+    padding-top: 10px;
+    margin-left: 3.5vw;
+    width: 844px;
+    height: 9vh;
+  }
+  .margin-area {
+    position: relative;
+    text-align: center;
+    font-size: 14px;
+    margin: 0 20px;
+  }
+
+  .dot {
+    height: 30px;
+    width: 30px;
+    position: absolute;
+    background: white;
     border-radius: 50%;
+    top: 10px;
+    color: #fff;
+    border: 3px solid black;
+    line-height: 30px;
+    z-index: 9999;
+  }
+
+    .one {
+      left: 5vw;
+      background: black;
+    }
+    .two {
+      left: 30.5vw;
+      background: black;
+    }
+    .three {
+      left: 55vw;
+      background: white;
+     
+    }
+    .four {
+      left: 80vw;
+      background: white;
+    }
+  
+  .progress-bar {
+    position: absolute;
+    height: 10px;
+    width: 75vw;
+    top: 20px;
+    left: 5vw;
+    background: rgb(170, 168, 168);
 }
 
-.one {
-    left: 65px;
-    background: #0C84D9;
-}
+  
 
-.two {
-    left: 180px;
-    background: #0C84D9;
-}
-
-.three {
-    left: 290px;
-    background: #0C84D9;
-}
-
-.four {
-    background: #0C84D9;
-}
-
-
-
-.first {
-    background: #d9a20c;
-}
-
-.second {
-    background: #d9a20c;
-}
-
-.third {
-    background: #d9a20c;
-}
 
 
 
