--- a/src/style.css
+++ b/src/style.css
@@ -9,11 +9,113 @@ body {
   background-color: rgb(255, 251, 251);
 }
 
-/* HEADER */
-.head {
-  background-color: #000000;
-  color: #fff;
+
+
+/* HEADER-MAIN */
+
+.header-main {
+    display: none;
+    background-color: #dfd3d3;
+    padding: 15px 15px 15px 80px;
+    font-size: .9rem;
+    font-weight: bold;
+    height: min-content;
 }
+
+
+/* HEADER-PROGRESS */
+
+.header-progress {
+    background: #ebe9e9;
+    width: 100vw;
+    height: min-content;
+}
+
+.messages {
+    height: min-content;
+    font-weight: bold;
+    font-size: 1.2rem;
+    padding: 1vw;
+}
+
+    .message {
+        display: inline;
+        position: absolute;
+        margin-left: 4vw;
+    }
+
+        .child-one {
+            left: 5vw;
+        }
+
+        .child-two {
+            left: 30.5vw;
+        }
+
+        .child-three {
+            left: 55vw;
+        }
+
+        .child-four {
+            left: 80vw;
+        }
+
+
+.wrapper {
+    padding-top: 10px;
+    margin-left: 3.5vw;
+    width: 844px;
+    height: 9vh;
+  }
+  .margin-area {
+    position: relative;
+    text-align: center;
+    font-size: 14px;
+    margin: 0 20px;
+  }
+
+    .dot {
+        height: 30px;
+        width: 30px;
+        position: absolute;
+        background: white;
+        border-radius: 50%;
+        top: 10px;
+        color: #fff;
+        border: 3px solid black;
+        line-height: 30px;
+        z-index: 9999;
+    }
+
+        .one {
+        left: 5vw;
+        background: black;
+        }
+        .two {
+        left: 30.5vw;
+        background: black;
+        }
+        .three {
+        left: 55vw;
+        background: white;
+        
+        }
+        .four {
+        left: 80vw;
+        background: white;
+        }
+  
+  .progress-bar {
+    position: absolute;
+    height: 10px;
+    width: 75vw;
+    top: 20px;
+    left: 5vw;
+    background: rgb(195, 192, 192);
+}
+
+  
+
 
 .main {
   display: flex;
