--- a/src/style.css
+++ b/src/style.css
@@ -21,6 +21,7 @@ body {
 
 /* HEADER-PROGRESS */
 .header-progress {
+  display: none;
   background: #ebe9e9;
   width: 100vw;
   height: 130px;
@@ -113,9 +114,10 @@ body {
 .main {
   display: flex;
   position: relative;
-  margin: 40px;
+  margin-bottom: 90px;
+  width: 100vw;
   padding: 40px;
-  justify-content: space-evenly;
+  justify-content: space-around;
 }
 
 .picture img {
@@ -158,7 +160,7 @@ body {
 }
 
 .profile {
-  display: flex;
+  display: none;
   vertical-align: middle;
   margin: 30px;
   padding: 30px;
@@ -183,7 +185,7 @@ body {
 
 /* Section Address*/
 .address {
-  display: flex;
+  display: none;
   vertical-align: middle;
   margin: 30px;
   padding: 30px;
@@ -201,7 +203,7 @@ body {
 
 /* Section Shipping*/
 .shipping {
-  display: flex;
+  display: none;
   vertical-align: middle;
   margin: 30px;
   padding: 30px;
@@ -214,6 +216,10 @@ body {
 }
 
 /* SECTION FINISH */
+
+.finish {
+  display: none;
+}
 
 .order-message {
   padding: 2em 5rem;
@@ -282,16 +288,18 @@ body {
 
 /*First footer*/
 .first-foot {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-align: center;
-  padding: 30px;
   background: #d0cece;
   width: 100vw;
-  height: min-content;
+  height: 100px;
 }
 
 /*Second footer*/
 .second-foot {
-  display: flex;
+  display: none;
   justify-content: end;
   text-align: center;
   padding: 30px;
