--- a/src/style.css
+++ b/src/style.css
@@ -155,6 +155,29 @@ body {
 
 /* Forms */
 
+.profile-form input {
+  border: 2px solid black;
+  font-size: 1.1rem;
+  width: 14vw;
+  padding: 5px;
+  margin-top: .6rem;
+}
+
+.profile-form label {
+  font-size: 1.1rem;
+  font-weight: bold;
+}
+
+.error {
+  display: none;
+  color: red;
+  background-color: rgb(250, 204, 211);
+  margin-top: 5px;
+  padding-left: 5px;
+  width: 14vw;
+  margin-bottom: 1.6rem;
+}
+
 .form-element {
   padding-bottom: 10px;
 }
@@ -263,8 +286,8 @@ body {
   margin-bottom: 1em;
 }
 
-.error {
-  display: none;
+
+.error-check {
   color: red;
   background-color: rgb(250, 204, 211);
   margin-top: 5px;
